Fix button on safari

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,6 +54,8 @@ html{
   border: none;
   padding: 8px 16px;
   margin-bottom: 16px;
+  /* Bo thuoc tinh mac dinh tren safari */
+  -webkit-appearance: none; 
 }
 .btn:hover{
   color: #000;
@@ -380,9 +382,6 @@ html{
   padding: 10px;
   border: 1px solid #ccc;
   width: 100%;
-}
-.contact-form .submit{
-  -webkit-appearance: button;
 }
 .map-section img{
   width: 100%;
